syntax = "proto3";

package notification;

option go_package = "github.com/example/notification-service/proto";

// NotificationService handles sending notifications to users.
service NotificationService {
  // SendNotification sends a single notification.
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);

  // SendBulkNotifications sends notifications to multiple users.
  rpc SendBulkNotifications(SendBulkRequest) returns (SendBulkResponse);

  // GetNotificationStatus gets the status of a sent notification.
  rpc GetNotificationStatus(GetStatusRequest) returns (NotificationStatus);

  // StreamNotifications streams notifications to a connected client.
  rpc StreamNotifications(StreamRequest) returns (stream Notification);

  // SubscribeToTopic subscribes a user to notification topics.
  rpc SubscribeToTopic(SubscribeRequest) returns (SubscribeResponse);
}

// NotificationType represents the type of notification.
enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_EMAIL = 1;
  NOTIFICATION_TYPE_PUSH = 2;
  NOTIFICATION_TYPE_SMS = 3;
  NOTIFICATION_TYPE_IN_APP = 4;
}

// Priority represents notification priority.
enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_NORMAL = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_URGENT = 4;
}

// Notification represents a notification message.
message Notification {
  string id = 1;
  string user_id = 2;
  NotificationType type = 3;
  string title = 4;
  string body = 5;
  map<string, string> data = 6;
  Priority priority = 7;
  int64 created_at = 8;
  int64 sent_at = 9;
  bool is_read = 10;
}

// SendNotificationRequest is the request to send a notification.
message SendNotificationRequest {
  string user_id = 1;
  NotificationType type = 2;
  string title = 3;
  string body = 4;
  map<string, string> data = 5;
  Priority priority = 6;
  int64 schedule_at = 7; // Optional: schedule for future delivery
}

// SendNotificationResponse is the response after sending.
message SendNotificationResponse {
  string notification_id = 1;
  bool success = 2;
  string error_message = 3;
}

// SendBulkRequest is the request to send bulk notifications.
message SendBulkRequest {
  repeated string user_ids = 1;
  NotificationType type = 2;
  string title = 3;
  string body = 4;
  map<string, string> data = 5;
  Priority priority = 6;
}

// SendBulkResponse is the response after bulk sending.
message SendBulkResponse {
  int32 total_sent = 1;
  int32 total_failed = 2;
  repeated string failed_user_ids = 3;
}

// GetStatusRequest requests the status of a notification.
message GetStatusRequest {
  string notification_id = 1;
}

// NotificationStatus represents the delivery status.
message NotificationStatus {
  string notification_id = 1;
  string status = 2; // pending, sent, delivered, failed, read
  int64 sent_at = 3;
  int64 delivered_at = 4;
  int64 read_at = 5;
  string error_message = 6;
}

// StreamRequest requests to stream notifications.
message StreamRequest {
  string user_id = 1;
  repeated NotificationType types = 2; // Filter by types
}

// SubscribeRequest subscribes to topics.
message SubscribeRequest {
  string user_id = 1;
  repeated string topics = 2;
}

// SubscribeResponse confirms subscription.
message SubscribeResponse {
  bool success = 1;
  repeated string subscribed_topics = 2;
}
